# SoftwareEngineering

./: .gitignore  README.md  SDD_드론_항공촬영_임무_평가_시스템.md  build_exe.bat  pyproject.toml
docs/: IMPLEMENTATION_PLAN.md  SRS_드론_항공촬영_임무_평가_시스템.md  STD_드론_항공촬영_임무_평가_시스템.md
drone_eval/: __init__.py  main.py  webapp.py
drone_eval/controller/: app_controller.py
drone_eval/model/: history.py  logs.py  mission.py  result.py
drone_eval/service/: evaluator.py  file_loader.py  history_manager.py  matcher.py  odm_service.py  preview_service.py  report_exporter.py  score_calculator.py  validator.py  visualization_service.py
drone_eval/utils/: angle_utils.py  exceptions.py  logger.py
drone_eval/view/: main_window.py  tab_detail.py  tab_file_select.py  tab_history.py  tab_mission.py  tab_odm.py  tab_preview.py  tab_report.py  tab_run.py  tab_summary.py  tab_visual.py
sample_data/: capture_log.csv  collision_log.csv  flight_log.csv  mission.json
tests/: conftest.py  test_angle_utils.py  test_app_controller.py  test_convert_airsim.py  test_evaluator.py  test_file_loader.py  test_history_manager.py  test_matcher.py  test_odm_service.py  test_preview_service.py  test_report_exporter.py  test_score_calculator.py  test_validator.py  test_visualization_service.py
tools/: convert_airsim.py
