[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "drone-eval"
version = "0.1.0"
description = "Drone aerial photography mission evaluation system"
requires-python = ">=3.10"
dependencies = [
  "PyQt5>=5.15",
  "numpy>=1.24",
  "scipy>=1.10",
  "matplotlib>=3.7",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.scripts]
drone-eval = "drone_eval.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
